Updated some features

--- a/LogisticsApp FE/index.html
+++ b/LogisticsApp FE/index.html
@@ -24,27 +24,19 @@
             </div>
         </div>
         <div class="hero_section">
-            <img src="./imgs/" alt="" class="hero_pic"  id="about">
+            <img src="./imgs/hero-pic.jpg" alt="" class="hero_pic"  id="about">
             <div class="section_header">
-                <h2 id="pricing">About Us</h2>
+                <h2>About Us</h2>
             </div>
             <div class="section_text">
-                <h4>Cargo4You is an international transport and logistics company, offering our clients customised solutions with high quality unique service.</h5><br><br>
+                <h4>Cargo4You is an international transport and logistics company, offering our clients customised solutions with high quality unique service.<h5><br><br>
                 <p>We specialize in ocean freights, including in Ro-Ro shipments to Africa, Australia, Central and South America, the Middle and Far East, and others.<br><br>
                 A major advantage of this transportation mode is the minimal risk of damage involved. Quick loading and unloading help to increase the transmit time.<br><br>
                 No matter what kind of freight you need to send, or where it has to go, Cargo4You will make sure it arrives safely and on time. Our freight transport services include international and domestic shipping, end-to-end visibility to track your shipment, and flexible delivery times.<br><br>
                 At Cargo4You we work hand in hand with our clients so that their shipment always reaches its destination in the best possible way and within the specified timeframe.<br><br>
                 Cargo4You employs a team of highly trained staff, dependable personnel and offers a comprehensive list of services which meet your needs.<br><br>
                 We cover a lot of regions and over 760 cities and thus we make the perfect partner for you and your customers.<br><br>
-                Regions we cover :
-                <ul class="regions_list">
-                    <li>Mediterranean Sea</li>
-                    <li>Scandinavia</li>
-                    <li>Caribbean Sea</li>
-                    <li>Middle East</li>
-                    <li>Indian Ocean</li>
-                    
-                </ul>
+                Regions we cover: Mediterranean Sea, Scandinavia, Caribbean Sea, Middle East, Indian Ocean
             </p>
         </div>
         <div class="section_container">
@@ -53,13 +45,13 @@
             </div>
             <p class="section_text core_values">The core values of Cargo4You are to provide <br><br> 
                 <span class="values">
-                Quality, Reliability and Innovation and Customer Satisfaction </span> <br><br>
+                Quality, Reliability, Innovation and Customer Satisfaction </span> <br><br>
                 Built around an organization which prides itself on teamwork and best practice; these values are what guide us. They set a clear path for us to follow, they help us to grow together with our valuable customers and they underline our spirit of success.</p>
         </div>
         <div class="section_container">
             <!-- COURIERS -->
             <div class="section_header">
-                <h2 id="couriers_info">Couriers Information</h2>
+                <h2 id="couriers_info">Couriers</h2>
             </div>
             <div class="buttons_container">
                 <div class="button_area">
@@ -92,15 +84,17 @@
                         </div>
                         <div class="button_area_pricing">
                             <input type="number" id="calculations_by_type" placeholder="0-Weight / 1-Dimensions">
-                            <button class="show_calculations_by_type">Offers by weight/dimensions</button>
+                            <button class="show_calculations_by_type">See offers</button>
+                            <div class="see_offers_info">Enter 0 to get offers by weight (kg) or 1 to get offers by dimensions (cm³)</div>
                         </div>
                         <div class="button_area_pricing">
                             <div class="package_details_header">Enter your package details and get a specific offer!</div>
                             
-                            <input type="number" id="calculation_type" placeholder="0-Weight / 1-Dimensions">
-                            <input type="number" id="calculation_input" placeholder="Enter amount">
+                            <input type="number" id="input_weight" placeholder="Enter package weight">
+                            <input type="number" id="input_height" placeholder="Enter package height">
+                            <input type="number" id="input_width" placeholder="Enter package width">
+                            <input type="number" id="input_depth" placeholder="Enter package depth">
                             <button class="show_specific_calculation">Get offer</button>
-                            <div class="package_details_details">Enter 0 for weight (kg) or 1 for dimensions (cm³), then enter the amount of your choice.</div>
                         </div>
                     </div>
                 <div class="pricing_container"></div>
