Finalized front-end

--- a/LogisticsApp FE/index.html
+++ b/LogisticsApp FE/index.html
@@ -29,16 +29,15 @@
                 <h2>About Us</h2>
             </div>
             <div class="section_text">
-                <h4>Cargo4You is an international transport and logistics company, offering our clients customised solutions with high quality unique service.<h5><br><br>
+                <p>Cargo4You is an international transport and logistics company, offering our clients customised solutions with high quality unique service.<p><br><br>
                 <p>We specialize in ocean freights, including in Ro-Ro shipments to Africa, Australia, Central and South America, the Middle and Far East, and others.<br><br>
                 A major advantage of this transportation mode is the minimal risk of damage involved. Quick loading and unloading help to increase the transmit time.<br><br>
                 No matter what kind of freight you need to send, or where it has to go, Cargo4You will make sure it arrives safely and on time. Our freight transport services include international and domestic shipping, end-to-end visibility to track your shipment, and flexible delivery times.<br><br>
                 At Cargo4You we work hand in hand with our clients so that their shipment always reaches its destination in the best possible way and within the specified timeframe.<br><br>
                 Cargo4You employs a team of highly trained staff, dependable personnel and offers a comprehensive list of services which meet your needs.<br><br>
                 We cover a lot of regions and over 760 cities and thus we make the perfect partner for you and your customers.<br><br>
-                Regions we cover: Mediterranean Sea, Scandinavia, Caribbean Sea, Middle East, Indian Ocean
-            </p>
-        </div>
+                Regions we cover: Mediterranean Sea, Scandinavia, Caribbean Sea, Middle East, Indian Ocean</p>
+            </div>
         <div class="section_container">
             <div class="section_header">
                 <h2>Our Core Values</h2>
@@ -104,7 +103,8 @@
         <footer class="footer">
             <div class="footer_container">
                 <div class="footer_text">
-                    Cargo4You is an international transport and logistics company, offering our clients customised solutions with unique service and of high quality.
+                    <p>                    Cargo4You is an international transport and logistics company, offering our clients customised solutions with unique service and of high quality.
+                    </p>
                 </div>
                 <div class="footer_img">
                     <img src="./imgs/cargo-logo2.png" id="footer_img" alt="">
